# Flamingo_Control

./: .flake8  .gitignore  .pre-commit-config.yaml  BUGFIX_LOGGING_AND_SETTINGS.md  CLAUDE_REPORT_FINAL.md  CLAUDE_REPORT_SERVICE_IMPLEMENTATION.md  CLEANUP_TASKS_COMPLETED.md  CONFIGURATION_MANAGEMENT.md  CONSOLIDATION_PLAN_PHASE2.md  COORDINATE_SYSTEM.md  FEATURE_REPORT_2025-10-14.md  FIXES_SUMMARY.md  FULL_IMPLEMENTATION_SUMMARY.md  GUI.py  GUI_REDESIGN_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  LiveViewCommunication_Analysis.md  MVC_QUICKSTART.md  NETWORK_CONFIGURATION.md  QUICKSTART.md  README.md  README_MINIMAL.md  README_MVC.md  REFACTORING_NOTES.md  SAMPLE_VIEW_DESIGN.md  SESSION_SUMMARY_2025-11-04.md  STAGE_CONTROL_QUICKSTART.md  STAGE_MOVEMENT_INTEGRATION.md  Snapshot.txt  TEST_RESULTS.md  UPDATE_REPORT_2025-10-14.md  WINDOWS_COMPATIBILITY.md  WINDOWS_QUICKSTART.md  ZStack.txt  _setup.py  cc_loop.py  check_network.sh  (+39 more)
.claude/: claude.md
claude-report/: background_viz_updates_during_tiles.md  connection_error_status_indicator.md  contrast_slider.md  fix_2d_overview_session_load_and_tile_move.md  fix_status_flicker_and_tile_frame_capture.md  fix_tile_collection_server_crash.md  led_2d_overview_documentation.md  main_thread_starvation_fix.md  mip_collection_folder_auto_reorganization.md  mip_overview_axis_inversion.md  napari_icon_removal.md  performance_testing_ome_zarr_implementation.md  phase6_sample_view_decomposition.md  right_click_move_to_z.md  server_directory_fix.md  session_save_path_defaults.md  (+5 more)
(+500 files in other folders)
