[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "py2flamingo"
version = "0.4.4"
description = "Control software for Flamingo light sheet systems."

[tool.setuptools.packages.find]
where = ["src"]  # packages live under src/
include = ["py2flamingo*"]

